<resources>
    <string name="app_name">Bus Now</string>
    <string name="SignUp">Sign Up</string>
    <string name="SignIn">Sign In</string>
    <string name="Username">Username</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="already_have">Already Have An Account?</string>
    <string name="ForgetPassword">Forgot PAssword?</string>
    <string name="Buses">Buses</string>
    <string name="Home">Home</string>
    <string name="AddBus">Add Bus</string>
    <string name="Message">Meesage</string>
    <string name="Agenda">Agend</string>
    <string name="Profile">Profile</string>
    <string name="name">Name</string>
    <string name="Drivername">Driver Name</string>
    <string name="Location">Location</string>
    <string name="WriteYourMsg">Write your message</string>
    <string name="Phone">Phone</string>
    <string name="AboutText">bus now A forward vision that has been achieved in our application,
       through diligent work and renewed thought to create an application that helps university students and bus companies, until now.
       bus now aims to improve transportation for students in the Gaza Strip by providing a unique and distinguished transportation experience.
 The bus now is characterized by regularity, and all our buses are characterized by cleanliness safety and ease of use, as they are subject to a security monitoring system.</string>

    <string-array name="locations">
        <item>select location...</item>
        <item>الشمال</item>
        <item>Gaza</item>
        <item>الوسطى</item>
        <item>Khanyounis</item>
        <item>Rafah</item>
    </string-array>

    <string-array name="passengers">
        <item>select Bus size...</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
        <item>55</item>
        <item>60</item>
        <item>65</item>
        <item>70</item>
        <item>75</item>
        <item>80</item>
        <item>85</item>
        <item>90</item>
        <item>95</item>
        <item>100</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="NumOfPass">Max # of \n Passengers</string>
    <string name="Logout">Logout</string>
    <string name="EditProfile">Edit Profile</string>
    <string name="membersince">Member Since</string>
    <string name="DarkMode">Dark Mode</string>
    <string name="Language">Language</string>
    <string name="Share">Share</string>
    <string name="review">Review</string>
    <string name="About">About</string>
    <string name="Fullname">Full name</string>
    <string name="Address">Address</string>
    <string name="drivers">Drivers</string>
    <string name="EditEmailAndPassword">Edit email and password</string>
    <string name="Time">Time to move on</string>
    <string name="RYShure">Are you sure to change your profile image?</string>
    <string name="RYWant">Do you want to Exit?</string>
    <string name="RYWantLog" >Do you want to Logout?</string>
</resources>