<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/background_color"
    tools:context=".ui.fragments.ProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/SettingsFragment_iv_Profile"
            android:layout_width="@dimen/_144sdp"
            android:layout_height="@dimen/_144sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_32sdp"
            android:scaleType="centerCrop"
            app:riv_border_color="@color/purple_500"
            app:riv_border_width="@dimen/_2sdp"
            app:riv_oval="true"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/SettingsFragment_iv_Profile"
            android:id="@+id/SettingsFragment_tv_username"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/Username"
            android:gravity="center"
            android:textSize="@dimen/_32ssp"
            android:textColor="@color/purple_500"
            />

        <TextView
            android:id="@+id/SettingsFragment_tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/SettingsFragment_tv_username"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center"
            android:text="@string/Email"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp" />

        <TextView
            android:id="@+id/SettingsFragment_tv_member"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/SettingsFragment_tv_email"
            android:layout_marginTop="@dimen/_16sdp"
            android:gravity="center"
            android:text="@string/membersince" />

        <TextView
            android:id="@+id/SettingsFragment_tv_membersince"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/SettingsFragment_tv_member"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center"
            android:text="@string/membersince"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/SettingsFragment_btn_editprofile"
            style="@style/splash_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/SettingsFragment_tv_membersince"
            android:layout_marginTop="@dimen/_49sdp"
            android:drawableStart="@drawable/ic_baseline_edit_24"
            android:drawablePadding="-90dp"
            android:drawableTint="@color/black"
            android:paddingStart="@dimen/_80sdp"
            android:text="@string/EditProfile"
            android:textColor="@color/purple_500" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/SettingsFragment_btn_logout"
            style="@style/splash_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/SettingsFragment_btn_editprofile"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_32sdp"
            android:background="@android:color/holo_red_dark"
            android:drawablePadding="-90dp"
            android:drawableTint="@color/black"
            android:gravity="center"
            android:text="@string/Logout"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold" />



        <!--    <ToggleButton-->
        <!--        android:layout_width="wrap_content"-->
        <!--        android:layout_height="wrap_content" />-->
    </RelativeLayout>

</ScrollView>