<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.EditEmailAndPasswordFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/_16sdp">


        <TextView
            android:id="@+id/emailAndPassFragment_tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_48sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:fontFamily="@font/biryani"
            android:gravity="center"
            android:text="@string/EditEmailAndPassword"
            android:textColor="@color/black"
            android:textSize="@dimen/_20ssp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailAndPassFragment_etl_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailAndPassFragment_tv_title"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:hint="@string/Email"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
            app:boxCornerRadiusBottomStart="@dimen/_8sdp"
            app:boxCornerRadiusTopEnd="@dimen/_8sdp"
            app:boxCornerRadiusTopStart="@dimen/_8sdp"
            app:boxStrokeColor="@android:color/darker_gray"
            app:boxStrokeWidth="@dimen/_2sdp"
            app:counterEnabled="true"
            app:counterMaxLength="50"
            app:counterTextColor="@android:color/holo_green_dark"
            app:errorEnabled="true"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailAndPassFragment_et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailAndPassFragment_etl_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailAndPassFragment_etl_email"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:hint="@string/password"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
            app:boxCornerRadiusBottomStart="@dimen/_8sdp"
            app:boxCornerRadiusTopEnd="@dimen/_8sdp"
            app:boxCornerRadiusTopStart="@dimen/_8sdp"
            app:boxStrokeColor="@android:color/darker_gray"
            app:boxStrokeWidth="@dimen/_2sdp"
            app:counterEnabled="true"
            app:counterMaxLength="50"
            app:counterTextColor="@android:color/holo_green_dark"
            app:errorEnabled="true"
            app:hintEnabled="true"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailAndPassFragment_et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/emailAndPassFragment_btn_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailAndPassFragment_etl_password"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/_64sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_64sdp"
            android:paddingTop="@dimen/_8sdp"
            android:paddingBottom="@dimen/_8sdp"
            android:text="@string/common_google_play_services_update_button"
            android:textSize="@dimen/_16ssp"
            android:visibility="gone"
            app:cornerRadius="@dimen/_8sdp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/emailAndPassFragment_btn_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailAndPassFragment_etl_password"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/_64sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_64sdp"
            android:paddingTop="@dimen/_8sdp"
            android:paddingBottom="@dimen/_8sdp"
            android:text="@string/SignIn"
            android:textSize="@dimen/_16ssp"
            app:cornerRadius="@dimen/_8sdp" />

    </RelativeLayout>

</ScrollView>